优化相关代码，登录功能实现。