@@ -1,7 +1,7 @@
 package com.can.easyquiz.config.security;
 
-import com.can.easyquiz.config.property.Cookie;
-import com.can.easyquiz.config.property.System;
+import com.can.easyquiz.config.property.CookieConfig;
+import com.can.easyquiz.config.property.SystemConfig;
 import com.can.easyquiz.enums.Role;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
@@ -10,20 +10,25 @@ import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+import org.springframework.security.config.annotation.web.configurers.HeadersConfigurer;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.context.HttpSessionSecurityContextRepository;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Collections;
 import java.util.List;
+
+import static org.springframework.security.config.Customizer.withDefaults;
 
 @Configuration
 @EnableWebSecurity
 public class SecurityConfig {
 
-    private final System systemConfig;
+    private final SystemConfig systemConfig;
     private final LoginAuthenticationEntryPoint restAuthenticationEntryPoint;
     private final RestAuthenticationProvider restAuthenticationProvider;
     private final RestDetailsServiceImpl formDetailsService;
@@ -33,14 +38,14 @@ public class SecurityConfig {
     private final RestAccessDeniedHandler restAccessDeniedHandler;
 
     @Autowired
-    public SecurityConfig(System systemConfig,
-                              LoginAuthenticationEntryPoint restAuthenticationEntryPoint,
-                              RestAuthenticationProvider restAuthenticationProvider,
-                              RestDetailsServiceImpl formDetailsService,
-                              RestAuthenticationSuccessHandler restAuthenticationSuccessHandler,
-                              RestAuthenticationFailureHandler restAuthenticationFailureHandler,
-                              RestLogoutSuccessHandler restLogoutSuccessHandler,
-                              RestAccessDeniedHandler restAccessDeniedHandler) {
+    public SecurityConfig(SystemConfig systemConfig,
+                          LoginAuthenticationEntryPoint restAuthenticationEntryPoint,
+                          RestAuthenticationProvider restAuthenticationProvider,
+                          RestDetailsServiceImpl formDetailsService,
+                          RestAuthenticationSuccessHandler restAuthenticationSuccessHandler,
+                          RestAuthenticationFailureHandler restAuthenticationFailureHandler,
+                          RestLogoutSuccessHandler restLogoutSuccessHandler,
+                          RestAccessDeniedHandler restAccessDeniedHandler) {
         this.systemConfig = systemConfig;
         this.restAuthenticationEntryPoint = restAuthenticationEntryPoint;
         this.restAuthenticationProvider = restAuthenticationProvider;
@@ -53,13 +58,15 @@ public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http, AuthenticationManager authenticationManager) throws Exception {
-        // 禁用 frameOptions
-        http.headers(headers -> headers.frameOptions(frameOptions -> frameOptions.disable()));
-
         List<String> securityIgnoreUrls = systemConfig.getSecurityIgnoreUrls();
         String[] ignores = (securityIgnoreUrls != null) ? securityIgnoreUrls.toArray(new String[0]) : new String[0];
 
         http
+                .headers(headers -> headers.frameOptions(HeadersConfigurer.FrameOptionsConfig::disable))
+                // 添加session管理
+                .sessionManagement(session -> session
+                        .sessionCreationPolicy(SessionCreationPolicy.IF_REQUIRED)
+                )
                 // 替换默认的 UsernamePasswordAuthenticationFilter
                 .addFilterAt(authenticationFilter(authenticationManager), UsernamePasswordAuthenticationFilter.class)
                 // 配置异常处理
@@ -85,30 +92,31 @@ public class SecurityConfig {
                 .logout(logout -> logout
                         .logoutUrl("/api/user/logout")
                         .logoutSuccessHandler(restLogoutSuccessHandler)
+                        .deleteCookies("JSESSIONID")
                         .invalidateHttpSession(true)
                 )
                 // 配置记住我功能
                 .rememberMe(rememberMe -> rememberMe
-                        .key(Cookie.getName())
-                        .tokenValiditySeconds(Cookie.getInterval())
+                        .key(CookieConfig.getName())
+                        .tokenValiditySeconds(CookieConfig.getInterval())
                         .userDetailsService(formDetailsService)
                 )
-                // 禁用 CSRF
-                .csrf(csrf -> csrf.disable())
+                .csrf(AbstractHttpConfigurer::disable)
                 // 配置 CORS
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()));
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+                .httpBasic(withDefaults());
 
         return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        final CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Collections.singletonList("*"));
-        configuration.setAllowedMethods(Collections.singletonList("*"));
-        configuration.setAllowCredentials(false); // 禁用凭据
-        configuration.setAllowedHeaders(Collections.singletonList("*"));
-        final UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        CorsConfiguration configuration = new CorsConfiguration();
+        configuration.setAllowCredentials(true);
+        configuration.setAllowedOriginPatterns(List.of("*")); // 使用模式匹配
+        configuration.setAllowedMethods(List.of("*"));
+        configuration.setAllowedHeaders(List.of("*"));
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/api/**", configuration);
         return source;
     }
@@ -119,6 +127,7 @@ public class SecurityConfig {
         authenticationFilter.setAuthenticationSuccessHandler(restAuthenticationSuccessHandler);
         authenticationFilter.setAuthenticationFailureHandler(restAuthenticationFailureHandler);
         authenticationFilter.setAuthenticationManager(authenticationManager);
+        authenticationFilter.setSecurityContextRepository(new HttpSessionSecurityContextRepository());
         authenticationFilter.setUserDetailsService(formDetailsService);
         return authenticationFilter;
     }
